# sneakers_segmentation

./: README.md  config.json  final_test.py  infer.py  inferYoloSeg.py  infer_all.py  main.py  pyproject.toml  test.py  test_sam.py  train_sam.py  train_yolo.py  utils.py  visualizer.py
final/: config.py  detector.py  mask_predictor.py  schemas.py  segmentor.py
src/: detector.py  mask_predictor.py  schemas.py  segmentor.py
