[project]
name = "segmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "sam2>=1.1.0",
    "segment-anything>=1.0",
    "typer>=0.15.1",
    "ultralytics>=8.3.23",
]
